--- a/app/src/main/res/layout/activity_load_act.xml
+++ b/app/src/main/res/layout/activity_load_act.xml
@@ -9,4 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.heartbeat.apkplugins.LoadActActivity">
 
+    <Button
+        android:id="@+id/btn_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="start Plugin activity" />
 </RelativeLayout>
